main/default/objects/File_Settings__c/File_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>File Settings</label>
</CustomObject>