main/default/objects/File_Settings__c/fields/Admin_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Admin_Mail_Address__c</fullName>
    <label>Admin Mail Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>