main/default/objects/File_Settings__c/fields/Allowed_File_Extension__c.field-meta.xml
<CustomField>
    <fullName>Allowed_File_Extension__c</fullName>
    <label>Allowed File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>