main/default/objects/File_Settings__c/fields/Allowed_File_Size_in_MBs__c.field-meta.xml
<CustomField>
    <fullName>Allowed_File_Size_in_MBs__c</fullName>
    <label>Allowed File Size (in MBs)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>