main/default/objects/File_Settings__c/fields/Can_Create_Folder__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Create Folder</label>
    <type>Checkbox</type>
</CustomField>