main/default/objects/File_Settings__c/fields/Can_Download__c.field-meta.xml
<CustomField>
    <fullName>Can_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Download</label>
    <type>Checkbox</type>
</CustomField>