main/default/objects/File_Settings__c/fields/Can_Edit_Data__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Data</label>
    <type>Checkbox</type>
</CustomField>