main/default/objects/File_Settings__c/fields/Can_Rename__c.field-meta.xml
<CustomField>
    <fullName>Can_Rename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Rename</label>
    <type>Checkbox</type>
</CustomField>