main/default/objects/File_Settings__c/fields/Can_Share__c.field-meta.xml
<CustomField>
    <fullName>Can_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Share</label>
    <type>Checkbox</type>
</CustomField>