main/default/objects/File_Settings__c/fields/Template_Button__c.field-meta.xml
<CustomField>
    <fullName>Template_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Button</label>
    <type>Checkbox</type>
</CustomField>